Background fixed z-index: -1

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,6 +37,7 @@ textarea {
 html {
     font-size: 1em;
     line-height: 1.4;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 ::-moz-selection {
@@ -109,6 +110,7 @@ body {
 .footer-container,
 .main aside {
     background: $color_fond;
+    z-index: 1;
 }
 
 .title {
@@ -204,6 +206,19 @@ a, a:visited, a:hover {
 
 .main-container {
 	padding-top: 4em;
+}
+
+.header-background {
+	background: url('../img/background.jpg');
+	background-position: 50% 50%;
+	background-size: 100%;
+	background-repeat: no-repeat;
+
+	position: fixed;
+	width: 100%;
+	height: 85%;
+
+	z-index: -1;
 }
 
 /* ==========================================================================
